--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mui/icons-material": "^5.14.8",
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "next": "13.4.19",
+    "pretty-checkbox": "^3.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.2.2"
