--- a/package.json
+++ b/package.json
@@ -26,5 +26,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "@types/d3-scale": "^4.0.4",
+    "@types/d3-scale-chromatic": "^3.0.0",
+    "dotenv": "^16.3.1"
   }
 }
